QMOLEDEV/libIDL-0.8.14/y.output
State 12 conflicts: 1 shift/reduce
State 13 conflicts: 1 shift/reduce
State 14 conflicts: 1 shift/reduce
State 15 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 18 conflicts: 1 shift/reduce
State 57 conflicts: 2 shift/reduce
State 97 conflicts: 1 shift/reduce
State 175 conflicts: 1 shift/reduce
State 194 conflicts: 1 reduce/reduce
State 199 conflicts: 1 shift/reduce
State 231 conflicts: 1 shift/reduce
State 247 conflicts: 1 reduce/reduce
State 298 conflicts: 1 shift/reduce
State 299 conflicts: 1 shift/reduce
State 300 conflicts: 1 shift/reduce
State 301 conflicts: 1 shift/reduce
State 302 conflicts: 1 shift/reduce
State 303 conflicts: 1 shift/reduce
State 314 conflicts: 3 shift/reduce
State 355 conflicts: 1 shift/reduce
State 358 conflicts: 1 reduce/reduce
State 368 conflicts: 1 shift/reduce


Grammar

    0 $accept: specification $end

    1 specification: /* empty */
    2              | definition_list

    3 z_definition_list: /* empty */
    4                  | definition_list

    5 definition_list: definition
    6                | definition_list definition

    7 check_semicolon: ';'
    8                | /* empty */

    9 useless_semicolon: ';'

   10 check_comma: ','
   11            | /* empty */

   12 illegal_ident: scoped_name

   13 definition: type_dcl check_semicolon
   14           | const_dcl check_semicolon
   15           | except_dcl check_semicolon
   16           | interface check_semicolon
   17           | module check_semicolon
   18           | codefrag
   19           | srcfile
   20           | illegal_ident
   21           | useless_semicolon

   22 module_declspec: z_declspec TOK_MODULE

   23 $@1: /* empty */

   24 module: module_declspec new_or_prev_scope $@1 '{' z_definition_list '}' pop_scope

   25 interface_catch_ident: new_or_prev_scope
   26                      | TOK_OBJECT
   27                      | TOK_TYPECODE

   28 $@2: /* empty */

   29 $@3: /* empty */

   30 interface: z_declspec z_props TOK_INTERFACE interface_catch_ident $@2 pop_scope z_inheritance $@3 '{' interface_body '}' pop_scope
   31          | z_declspec z_props TOK_INTERFACE interface_catch_ident pop_scope

   32 z_inheritance: /* empty */
   33              | ':' scoped_name_list

   34 scoped_name_list: scoped_name
   35                 | scoped_name_list check_comma scoped_name

   36 interface_body: export_list

   37 export_list: /* empty */
   38            | export_list export

   39 export: type_dcl check_semicolon
   40       | except_dcl check_semicolon
   41       | op_dcl check_semicolon
   42       | attr_dcl check_semicolon
   43       | const_dcl check_semicolon
   44       | codefrag
   45       | useless_semicolon

   46 type_dcl: z_declspec type_dcl_def

   47 type_dcl_def: z_props TOK_TYPEDEF type_declarator
   48             | struct_type
   49             | union_type
   50             | enum_type
   51             | z_props TOK_NATIVE simple_declarator

   52 $@4: /* empty */

   53 type_dcl_def: z_props TOK_NATIVE simple_declarator '(' $@4 TOK_NATIVE_TYPE

   54 type_declarator: type_spec declarator_list

   55 type_spec: simple_type_spec
   56          | constr_type_spec

   57 simple_type_spec: base_type_spec
   58                 | template_type_spec
   59                 | scoped_name

   60 constr_type_spec: struct_type
   61                 | union_type
   62                 | enum_type

   63 z_new_ident_catch: /* empty */
   64                  | new_ident

   65 z_new_scope_catch: /* empty */
   66                  | new_scope

   67 @5: /* empty */

   68 @6: /* empty */

   69 struct_type: z_props TOK_STRUCT @5 z_new_scope_catch '{' @6 member_list '}' pop_scope

   70 @7: /* empty */

   71 @8: /* empty */

   72 union_type: z_props TOK_UNION @7 z_new_scope_catch TOK_SWITCH '(' switch_type_spec ')' '{' @8 switch_body '}' pop_scope

   73 switch_type_spec: integer_type
   74                 | char_type
   75                 | boolean_type
   76                 | enum_type
   77                 | scoped_name

   78 switch_body: case_stmt_list

   79 case_stmt_list: case_stmt
   80               | case_stmt_list case_stmt

   81 case_stmt: case_label_list element_spec check_semicolon

   82 element_spec: type_spec declarator

   83 case_label_list: case_label
   84                | case_label_list case_label

   85 case_label: TOK_CASE const_exp ':'
   86           | TOK_DEFAULT ':'

   87 const_dcl: z_declspec const_dcl_def

   88 const_dcl_def: TOK_CONST const_type new_ident '=' const_exp

   89 except_dcl: z_declspec except_dcl_def

   90 except_dcl_def: TOK_EXCEPTION new_scope '{' member_zlist '}' pop_scope

   91 member_zlist: /* empty */
   92             | member_zlist member

   93 is_readonly: /* empty */
   94            | TOK_READONLY

   95 attr_dcl: z_declspec attr_dcl_def

   96 @9: /* empty */

   97 attr_dcl_def: z_props is_readonly TOK_ATTRIBUTE @9 param_type_spec simple_declarator_list

   98 param_type_spec: op_param_type_spec
   99                | TOK_VOID

  100 op_param_type_spec_illegal: sequence_type
  101                           | constr_type_spec

  102 op_param_type_spec: base_type_spec
  103                   | string_type
  104                   | wide_string_type
  105                   | fixed_pt_type
  106                   | scoped_name
  107                   | op_param_type_spec_illegal

  108 is_oneway: /* empty */
  109          | TOK_ONEWAY

  110 op_dcl: z_declspec op_dcl_def

  111 op_dcl_def: z_props is_oneway op_type_spec new_scope parameter_dcls pop_scope is_raises_expr is_context_expr

  112 @10: /* empty */

  113 op_type_spec: @10 op_param_type_spec
  114             | TOK_VOID

  115 is_varargs: /* empty */
  116           | TOK_VARARGS

  117 is_cvarargs: /* empty */
  118            | ',' TOK_VARARGS

  119 parameter_dcls: '(' param_dcl_list is_cvarargs ')'
  120               | '(' is_varargs ')'

  121 param_dcl_list: param_dcl
  122               | param_dcl_list check_comma param_dcl

  123 @11: /* empty */

  124 param_dcl: z_props param_attribute @11 param_type_spec simple_declarator

  125 param_attribute: TOK_IN
  126                | TOK_OUT
  127                | TOK_INOUT
  128                | param_type_spec

  129 is_raises_expr: /* empty */
  130               | raises_expr

  131 is_context_expr: /* empty */
  132                | context_expr

  133 raises_expr: TOK_RAISES '(' scoped_name_list ')'

  134 context_expr: TOK_CONTEXT '(' string_lit_list ')'

  135 const_type: integer_type
  136           | char_type
  137           | octet_type
  138           | wide_char_type
  139           | boolean_type
  140           | floating_pt_type
  141           | string_type
  142           | wide_string_type
  143           | fixed_pt_const_type
  144           | scoped_name

  145 const_exp: or_expr

  146 or_expr: xor_expr
  147        | or_expr '|' xor_expr

  148 xor_expr: and_expr
  149         | xor_expr '^' and_expr

  150 and_expr: shift_expr
  151         | and_expr '&' shift_expr

  152 shift_expr: add_expr
  153           | shift_expr TOK_OP_SHR add_expr
  154           | shift_expr TOK_OP_SHL add_expr

  155 add_expr: mult_expr
  156         | add_expr '+' mult_expr
  157         | add_expr '-' mult_expr

  158 mult_expr: unary_expr
  159          | mult_expr '*' unary_expr
  160          | mult_expr '/' unary_expr
  161          | mult_expr '%' unary_expr

  162 unary_expr: unary_op primary_expr
  163           | primary_expr

  164 unary_op: '-'
  165         | '+'
  166         | '~'

  167 primary_expr: scoped_name
  168             | literal
  169             | '(' const_exp ')'

  170 literal: integer_lit
  171        | string_lit
  172        | char_lit
  173        | fixed_pt_lit
  174        | floating_pt_lit
  175        | boolean_lit

  176 @12: /* empty */

  177 enum_type: z_props TOK_ENUM @12 z_new_ident_catch '{' enumerator_list '}'

  178 scoped_name: ns_scoped_name

  179 ns_scoped_name: ns_prev_ident
  180               | TOK_OP_SCOPE ns_global_ident
  181               | ns_scoped_name TOK_OP_SCOPE ident

  182 enumerator_list: new_ident
  183                | enumerator_list check_comma new_ident

  184 member_list: member
  185            | member_list member

  186 member: type_spec declarator_list check_semicolon

  187 base_type_spec: floating_pt_type
  188               | integer_type
  189               | char_type
  190               | wide_char_type
  191               | boolean_type
  192               | octet_type
  193               | any_type
  194               | object_type
  195               | typecode_type

  196 template_type_spec: sequence_type
  197                   | string_type
  198                   | wide_string_type
  199                   | fixed_pt_type

  200 sequence_type: TOK_SEQUENCE '<' simple_type_spec ',' positive_int_const '>'
  201              | TOK_SEQUENCE '<' simple_type_spec '>'

  202 floating_pt_type: TOK_FLOAT
  203                 | TOK_DOUBLE
  204                 | TOK_LONG TOK_DOUBLE

  205 fixed_pt_type: TOK_FIXED '<' positive_int_const ',' integer_lit '>'

  206 fixed_pt_const_type: TOK_FIXED

  207 integer_type: signed_int
  208             | unsigned_int

  209 signed_int: signed_short_int
  210           | signed_long_int
  211           | signed_longlong_int

  212 signed_short_int: TOK_SHORT

  213 signed_long_int: TOK_LONG

  214 signed_longlong_int: TOK_LONG TOK_LONG

  215 unsigned_int: unsigned_short_int
  216             | unsigned_long_int
  217             | unsigned_longlong_int

  218 unsigned_short_int: TOK_UNSIGNED TOK_SHORT

  219 unsigned_long_int: TOK_UNSIGNED TOK_LONG

  220 unsigned_longlong_int: TOK_UNSIGNED TOK_LONG TOK_LONG

  221 char_type: TOK_CHAR

  222 wide_char_type: TOK_WCHAR

  223 boolean_type: TOK_BOOLEAN

  224 octet_type: TOK_OCTET

  225 any_type: TOK_ANY

  226 object_type: TOK_OBJECT

  227 typecode_type: TOK_TYPECODE

  228 string_type: TOK_STRING '<' positive_int_const '>'
  229            | TOK_STRING

  230 wide_string_type: TOK_WSTRING '<' positive_int_const '>'
  231                 | TOK_WSTRING

  232 declarator_list: declarator
  233                | declarator_list check_comma declarator

  234 declarator: simple_declarator
  235           | complex_declarator

  236 simple_declarator: new_ident

  237 complex_declarator: array_declarator

  238 simple_declarator_list: simple_declarator
  239                       | simple_declarator_list check_comma simple_declarator

  240 array_declarator: new_ident fixed_array_size_list

  241 fixed_array_size_list: fixed_array_size
  242                      | fixed_array_size_list fixed_array_size

  243 fixed_array_size: '[' positive_int_const ']'
  244                 | '[' ']'

  245 prop_hash: TOK_PROP_KEY TOK_PROP_VALUE
  246          | prop_hash ',' TOK_PROP_KEY TOK_PROP_VALUE
  247          | TOK_PROP_KEY
  248          | prop_hash ',' TOK_PROP_KEY

  249 ident: TOK_IDENT

  250 new_ident: ns_new_ident

  251 new_scope: ns_new_ident

  252 new_or_prev_scope: cur_ns_new_or_prev_ident

  253 pop_scope: /* empty */

  254 ns_new_ident: ident

  255 ns_prev_ident: ident

  256 cur_ns_new_or_prev_ident: ident

  257 ns_global_ident: ident

  258 string_lit_list: string_lit
  259                | string_lit_list check_comma string_lit

  260 positive_int_const: const_exp

  261 z_declspec: /* empty */
  262           | TOK_DECLSPEC

  263 z_props: /* empty */

  264 $@13: /* empty */

  265 z_props: '[' $@13 prop_hash ']'

  266 integer_lit: TOK_INTEGER

  267 string_lit: dqstring_cat

  268 char_lit: sqstring

  269 fixed_pt_lit: TOK_FIXEDP

  270 floating_pt_lit: TOK_FLOATP

  271 boolean_lit: TOK_TRUE
  272            | TOK_FALSE

  273 codefrag: z_declspec TOK_CODEFRAG

  274 srcfile: TOK_SRCFILE

  275 dqstring_cat: dqstring
  276             | dqstring_cat dqstring

  277 dqstring: TOK_DQSTRING

  278 sqstring: TOK_SQSTRING


Terminals, with rules where they appear

$end (0) 0
'%' (37) 161
'&' (38) 151
'(' (40) 53 72 119 120 133 134 169
')' (41) 72 119 120 133 134 169
'*' (42) 159
'+' (43) 156 165
',' (44) 10 118 200 205 246 248
'-' (45) 157 164
'/' (47) 160
':' (58) 33 85 86
';' (59) 7 9
'<' (60) 200 201 205 228 230
'=' (61) 88
'>' (62) 200 201 205 228 230
'[' (91) 243 244 265
']' (93) 243 244 265
'^' (94) 149
'{' (123) 24 30 69 72 90 177
'|' (124) 147
'}' (125) 24 30 69 72 90 177
'~' (126) 166
error (256)
TOK_ANY (258) 225
TOK_ATTRIBUTE (259) 97
TOK_BOOLEAN (260) 223
TOK_CASE (261) 85
TOK_CHAR (262) 221
TOK_CONST (263) 88
TOK_CONTEXT (264) 134
TOK_DEFAULT (265) 86
TOK_DOUBLE (266) 203 204
TOK_ENUM (267) 177
TOK_EXCEPTION (268) 90
TOK_FALSE (269) 272
TOK_FIXED (270) 205 206
TOK_FLOAT (271) 202
TOK_IN (272) 125
TOK_INOUT (273) 127
TOK_INTERFACE (274) 30 31
TOK_LONG (275) 204 213 214 219 220
TOK_MODULE (276) 22
TOK_NATIVE (277) 51 53
TOK_OBJECT (278) 26 226
TOK_OCTET (279) 224
TOK_ONEWAY (280) 109
TOK_OP_SCOPE (281) 180 181
TOK_OP_SHL (282) 154
TOK_OP_SHR (283) 153
TOK_OUT (284) 126
TOK_RAISES (285) 133
TOK_READONLY (286) 94
TOK_SEQUENCE (287) 200 201
TOK_SHORT (288) 212 218
TOK_STRING (289) 228 229
TOK_STRUCT (290) 69
TOK_SWITCH (291) 72
TOK_TRUE (292) 271
TOK_TYPECODE (293) 27 227
TOK_TYPEDEF (294) 47
TOK_UNION (295) 72
TOK_UNSIGNED (296) 218 219 220
TOK_VARARGS (297) 116 118
TOK_VOID (298) 99 114
TOK_WCHAR (299) 222
TOK_WSTRING (300) 230 231
TOK_FLOATP (301) 270
TOK_INTEGER (302) 266
TOK_DECLSPEC (303) 262
TOK_PROP_KEY (304) 245 246 247 248
TOK_PROP_VALUE (305) 245 246
TOK_NATIVE_TYPE (306) 53
TOK_IDENT (307) 249
TOK_SQSTRING (308) 278
TOK_DQSTRING (309) 277
TOK_FIXEDP (310) 269
TOK_CODEFRAG (311) 273
TOK_SRCFILE (312) 274


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
specification (80)
    on left: 1 2, on right: 0
z_definition_list (81)
    on left: 3 4, on right: 24
definition_list (82)
    on left: 5 6, on right: 2 4 6
check_semicolon (83)
    on left: 7 8, on right: 13 14 15 16 17 39 40 41 42 43 81 186
useless_semicolon (84)
    on left: 9, on right: 21 45
check_comma (85)
    on left: 10 11, on right: 35 122 183 233 239 259
illegal_ident (86)
    on left: 12, on right: 20
definition (87)
    on left: 13 14 15 16 17 18 19 20 21, on right: 5 6
module_declspec (88)
    on left: 22, on right: 24
module (89)
    on left: 24, on right: 17
$@1 (90)
    on left: 23, on right: 24
interface_catch_ident (91)
    on left: 25 26 27, on right: 30 31
interface (92)
    on left: 30 31, on right: 16
$@2 (93)
    on left: 28, on right: 30
$@3 (94)
    on left: 29, on right: 30
z_inheritance (95)
    on left: 32 33, on right: 30
scoped_name_list (96)
    on left: 34 35, on right: 33 35 133
interface_body (97)
    on left: 36, on right: 30
export_list (98)
    on left: 37 38, on right: 36 38
export (99)
    on left: 39 40 41 42 43 44 45, on right: 38
type_dcl (100)
    on left: 46, on right: 13 39
type_dcl_def (101)
    on left: 47 48 49 50 51 53, on right: 46
$@4 (102)
    on left: 52, on right: 53
type_declarator (103)
    on left: 54, on right: 47
type_spec (104)
    on left: 55 56, on right: 54 82 186
simple_type_spec (105)
    on left: 57 58 59, on right: 55 200 201
constr_type_spec (106)
    on left: 60 61 62, on right: 56 101
z_new_ident_catch (107)
    on left: 63 64, on right: 177
z_new_scope_catch (108)
    on left: 65 66, on right: 69 72
struct_type (109)
    on left: 69, on right: 48 60
@5 (110)
    on left: 67, on right: 69
@6 (111)
    on left: 68, on right: 69
union_type (112)
    on left: 72, on right: 49 61
@7 (113)
    on left: 70, on right: 72
@8 (114)
    on left: 71, on right: 72
switch_type_spec (115)
    on left: 73 74 75 76 77, on right: 72
switch_body (116)
    on left: 78, on right: 72
case_stmt_list (117)
    on left: 79 80, on right: 78 80
case_stmt (118)
    on left: 81, on right: 79 80
element_spec (119)
    on left: 82, on right: 81
case_label_list (120)
    on left: 83 84, on right: 81 84
case_label (121)
    on left: 85 86, on right: 83 84
const_dcl (122)
    on left: 87, on right: 14 43
const_dcl_def (123)
    on left: 88, on right: 87
except_dcl (124)
    on left: 89, on right: 15 40
except_dcl_def (125)
    on left: 90, on right: 89
member_zlist (126)
    on left: 91 92, on right: 90 92
is_readonly (127)
    on left: 93 94, on right: 97
attr_dcl (128)
    on left: 95, on right: 42
attr_dcl_def (129)
    on left: 97, on right: 95
@9 (130)
    on left: 96, on right: 97
param_type_spec (131)
    on left: 98 99, on right: 97 124 128
op_param_type_spec_illegal (132)
    on left: 100 101, on right: 107
op_param_type_spec (133)
    on left: 102 103 104 105 106 107, on right: 98 113
is_oneway (134)
    on left: 108 109, on right: 111
op_dcl (135)
    on left: 110, on right: 41
op_dcl_def (136)
    on left: 111, on right: 110
op_type_spec (137)
    on left: 113 114, on right: 111
@10 (138)
    on left: 112, on right: 113
is_varargs (139)
    on left: 115 116, on right: 120
is_cvarargs (140)
    on left: 117 118, on right: 119
parameter_dcls (141)
    on left: 119 120, on right: 111
param_dcl_list (142)
    on left: 121 122, on right: 119 122
param_dcl (143)
    on left: 124, on right: 121 122
@11 (144)
    on left: 123, on right: 124
param_attribute (145)
    on left: 125 126 127 128, on right: 124
is_raises_expr (146)
    on left: 129 130, on right: 111
is_context_expr (147)
    on left: 131 132, on right: 111
raises_expr (148)
    on left: 133, on right: 130
context_expr (149)
    on left: 134, on right: 132
const_type (150)
    on left: 135 136 137 138 139 140 141 142 143 144, on right: 88
const_exp (151)
    on left: 145, on right: 85 88 169 260
or_expr (152)
    on left: 146 147, on right: 145 147
xor_expr (153)
    on left: 148 149, on right: 146 147 149
and_expr (154)
    on left: 150 151, on right: 148 149 151
shift_expr (155)
    on left: 152 153 154, on right: 150 151 153 154
add_expr (156)
    on left: 155 156 157, on right: 152 153 154 156 157
mult_expr (157)
    on left: 158 159 160 161, on right: 155 156 157 159 160 161
unary_expr (158)
    on left: 162 163, on right: 158 159 160 161
unary_op (159)
    on left: 164 165 166, on right: 162
primary_expr (160)
    on left: 167 168 169, on right: 162 163
literal (161)
    on left: 170 171 172 173 174 175, on right: 168
enum_type (162)
    on left: 177, on right: 50 62 76
@12 (163)
    on left: 176, on right: 177
scoped_name (164)
    on left: 178, on right: 12 34 35 59 77 106 144 167
ns_scoped_name (165)
    on left: 179 180 181, on right: 178 181
enumerator_list (166)
    on left: 182 183, on right: 177 183
member_list (167)
    on left: 184 185, on right: 69 185
member (168)
    on left: 186, on right: 92 184 185
base_type_spec (169)
    on left: 187 188 189 190 191 192 193 194 195, on right: 57 102
template_type_spec (170)
    on left: 196 197 198 199, on right: 58
sequence_type (171)
    on left: 200 201, on right: 100 196
floating_pt_type (172)
    on left: 202 203 204, on right: 140 187
fixed_pt_type (173)
    on left: 205, on right: 105 199
fixed_pt_const_type (174)
    on left: 206, on right: 143
integer_type (175)
    on left: 207 208, on right: 73 135 188
signed_int (176)
    on left: 209 210 211, on right: 207
signed_short_int (177)
    on left: 212, on right: 209
signed_long_int (178)
    on left: 213, on right: 210
signed_longlong_int (179)
    on left: 214, on right: 211
unsigned_int (180)
    on left: 215 216 217, on right: 208
unsigned_short_int (181)
    on left: 218, on right: 215
unsigned_long_int (182)
    on left: 219, on right: 216
unsigned_longlong_int (183)
    on left: 220, on right: 217
char_type (184)
    on left: 221, on right: 74 136 189
wide_char_type (185)
    on left: 222, on right: 138 190
boolean_type (186)
    on left: 223, on right: 75 139 191
octet_type (187)
    on left: 224, on right: 137 192
any_type (188)
    on left: 225, on right: 193
object_type (189)
    on left: 226, on right: 194
typecode_type (190)
    on left: 227, on right: 195
string_type (191)
    on left: 228 229, on right: 103 141 197
wide_string_type (192)
    on left: 230 231, on right: 104 142 198
declarator_list (193)
    on left: 232 233, on right: 54 186 233
declarator (194)
    on left: 234 235, on right: 82 232 233
simple_declarator (195)
    on left: 236, on right: 51 53 124 234 238 239
complex_declarator (196)
    on left: 237, on right: 235
simple_declarator_list (197)
    on left: 238 239, on right: 97 239
array_declarator (198)
    on left: 240, on right: 237
fixed_array_size_list (199)
    on left: 241 242, on right: 240 242
fixed_array_size (200)
    on left: 243 244, on right: 241 242
prop_hash (201)
    on left: 245 246 247 248, on right: 246 248 265
ident (202)
    on left: 249, on right: 181 254 255 256 257
new_ident (203)
    on left: 250, on right: 64 88 182 183 236 240
new_scope (204)
    on left: 251, on right: 66 90 111
new_or_prev_scope (205)
    on left: 252, on right: 24 25
pop_scope (206)
    on left: 253, on right: 24 30 31 69 72 90 111
ns_new_ident (207)
    on left: 254, on right: 250 251
ns_prev_ident (208)
    on left: 255, on right: 179
cur_ns_new_or_prev_ident (209)
    on left: 256, on right: 252
ns_global_ident (210)
    on left: 257, on right: 180
string_lit_list (211)
    on left: 258 259, on right: 134 259
positive_int_const (212)
    on left: 260, on right: 200 205 228 230 243
z_declspec (213)
    on left: 261 262, on right: 22 30 31 46 87 89 95 110 273
z_props (214)
    on left: 263 265, on right: 30 31 47 51 53 69 72 97 111 124 177
$@13 (215)
    on left: 264, on right: 265
integer_lit (216)
    on left: 266, on right: 170 205
string_lit (217)
    on left: 267, on right: 171 258 259
char_lit (218)
    on left: 268, on right: 172
fixed_pt_lit (219)
    on left: 269, on right: 173
floating_pt_lit (220)
    on left: 270, on right: 174
boolean_lit (221)
    on left: 271 272, on right: 175
codefrag (222)
    on left: 273, on right: 18 44
srcfile (223)
    on left: 274, on right: 19
dqstring_cat (224)
    on left: 275 276, on right: 267 276
dqstring (225)
    on left: 277, on right: 275 276
sqstring (226)
    on left: 278, on right: 268


state 0

    0 $accept: . specification $end

    TOK_OP_SCOPE  shift, and go to state 1
    TOK_DECLSPEC  shift, and go to state 2
    TOK_IDENT     shift, and go to state 3
    TOK_SRCFILE   shift, and go to state 4
    ';'           shift, and go to state 5

    $end      reduce using rule 1 (specification)
    $default  reduce using rule 261 (z_declspec)

    specification      go to state 6
    definition_list    go to state 7
    useless_semicolon  go to state 8
    illegal_ident      go to state 9
    definition         go to state 10
    module_declspec    go to state 11
    module             go to state 12
    interface          go to state 13
    type_dcl           go to state 14
    const_dcl          go to state 15
    except_dcl         go to state 16
    scoped_name        go to state 17
    ns_scoped_name     go to state 18
    ident              go to state 19
    ns_prev_ident      go to state 20
    z_declspec         go to state 21
    codefrag           go to state 22
    srcfile            go to state 23


state 1

  180 ns_scoped_name: TOK_OP_SCOPE . ns_global_ident

    TOK_IDENT  shift, and go to state 3

    ident            go to state 24
    ns_global_ident  go to state 25


state 2

  262 z_declspec: TOK_DECLSPEC .

    $default  reduce using rule 262 (z_declspec)


state 3

  249 ident: TOK_IDENT .

    $default  reduce using rule 249 (ident)


state 4

  274 srcfile: TOK_SRCFILE .

    $default  reduce using rule 274 (srcfile)


state 5

    9 useless_semicolon: ';' .

    $default  reduce using rule 9 (useless_semicolon)


state 6

    0 $accept: specification . $end

    $end  shift, and go to state 26


state 7

    2 specification: definition_list .
    6 definition_list: definition_list . definition

    TOK_OP_SCOPE  shift, and go to state 1
    TOK_DECLSPEC  shift, and go to state 2
    TOK_IDENT     shift, and go to state 3
    TOK_SRCFILE   shift, and go to state 4
    ';'           shift, and go to state 5

    $end      reduce using rule 2 (specification)
    $default  reduce using rule 261 (z_declspec)

    useless_semicolon  go to state 8
    illegal_ident      go to state 9
    definition         go to state 27
    module_declspec    go to state 11
    module             go to state 12
    interface          go to state 13
    type_dcl           go to state 14
    const_dcl          go to state 15
    except_dcl         go to state 16
    scoped_name        go to state 17
    ns_scoped_name     go to state 18
    ident              go to state 19
    ns_prev_ident      go to state 20
    z_declspec         go to state 21
    codefrag           go to state 22
    srcfile            go to state 23


state 8

   21 definition: useless_semicolon .

    $default  reduce using rule 21 (definition)


state 9

   20 definition: illegal_ident .

    $default  reduce using rule 20 (definition)


state 10

    5 definition_list: definition .

    $default  reduce using rule 5 (definition_list)


state 11

   24 module: module_declspec . new_or_prev_scope $@1 '{' z_definition_list '}' pop_scope

    TOK_IDENT  shift, and go to state 3

    ident                     go to state 28
    new_or_prev_scope         go to state 29
    cur_ns_new_or_prev_ident  go to state 30


state 12

   17 definition: module . check_semicolon

    ';'  shift, and go to state 31

    ';'       [reduce using rule 8 (check_semicolon)]
    $default  reduce using rule 8 (check_semicolon)

    check_semicolon  go to state 32


state 13

   16 definition: interface . check_semicolon

    ';'  shift, and go to state 31

    ';'       [reduce using rule 8 (check_semicolon)]
    $default  reduce using rule 8 (check_semicolon)

    check_semicolon  go to state 33


state 14

   13 definition: type_dcl . check_semicolon

    ';'  shift, and go to state 31

    ';'       [reduce using rule 8 (check_semicolon)]
    $default  reduce using rule 8 (check_semicolon)

    check_semicolon  go to state 34


state 15

   14 definition: const_dcl . check_semicolon

    ';'  shift, and go to state 31

    ';'       [reduce using rule 8 (check_semicolon)]
    $default  reduce using rule 8 (check_semicolon)

    check_semicolon  go to state 35


state 16

   15 definition: except_dcl . check_semicolon

    ';'  shift, and go to state 31

    ';'       [reduce using rule 8 (check_semicolon)]
    $default  reduce using rule 8 (check_semicolon)

    check_semicolon  go to state 36


state 17

   12 illegal_ident: scoped_name .

    $default  reduce using rule 12 (illegal_ident)


state 18

  178 scoped_name: ns_scoped_name .
  181 ns_scoped_name: ns_scoped_name . TOK_OP_SCOPE ident

    TOK_OP_SCOPE  shift, and go to state 37

    TOK_OP_SCOPE  [reduce using rule 178 (scoped_name)]
    $default      reduce using rule 178 (scoped_name)


state 19

  255 ns_prev_ident: ident .

    $default  reduce using rule 255 (ns_prev_ident)


state 20

  179 ns_scoped_name: ns_prev_ident .

    $default  reduce using rule 179 (ns_scoped_name)


state 21

   22 module_declspec: z_declspec . TOK_MODULE
   30 interface: z_declspec . z_props TOK_INTERFACE interface_catch_ident $@2 pop_scope z_inheritance $@3 '{' interface_body '}' pop_scope
   31          | z_declspec . z_props TOK_INTERFACE interface_catch_ident pop_scope
   46 type_dcl: z_declspec . type_dcl_def
   87 const_dcl: z_declspec . const_dcl_def
   89 except_dcl: z_declspec . except_dcl_def
  273 codefrag: z_declspec . TOK_CODEFRAG

    TOK_CONST      shift, and go to state 38
    TOK_EXCEPTION  shift, and go to state 39
    TOK_MODULE     shift, and go to state 40
    TOK_CODEFRAG   shift, and go to state 41
    '['            shift, and go to state 42

    $default  reduce using rule 263 (z_props)

    type_dcl_def    go to state 43
    struct_type     go to state 44
    union_type      go to state 45
    const_dcl_def   go to state 46
    except_dcl_def  go to state 47
    enum_type       go to state 48
    z_props         go to state 49


state 22

   18 definition: codefrag .

    $default  reduce using rule 18 (definition)


state 23

   19 definition: srcfile .

    $default  reduce using rule 19 (definition)


state 24

  257 ns_global_ident: ident .

    $default  reduce using rule 257 (ns_global_ident)


state 25

  180 ns_scoped_name: TOK_OP_SCOPE ns_global_ident .

    $default  reduce using rule 180 (ns_scoped_name)


state 26

    0 $accept: specification $end .

    $default  accept


state 27

    6 definition_list: definition_list definition .

    $default  reduce using rule 6 (definition_list)


state 28

  256 cur_ns_new_or_prev_ident: ident .

    $default  reduce using rule 256 (cur_ns_new_or_prev_ident)


state 29

   24 module: module_declspec new_or_prev_scope . $@1 '{' z_definition_list '}' pop_scope

    $default  reduce using rule 23 ($@1)

    $@1  go to state 50


state 30

  252 new_or_prev_scope: cur_ns_new_or_prev_ident .

    $default  reduce using rule 252 (new_or_prev_scope)


state 31

    7 check_semicolon: ';' .

    $default  reduce using rule 7 (check_semicolon)


state 32

   17 definition: module check_semicolon .

    $default  reduce using rule 17 (definition)


state 33

   16 definition: interface check_semicolon .

    $default  reduce using rule 16 (definition)


state 34

   13 definition: type_dcl check_semicolon .

    $default  reduce using rule 13 (definition)


state 35

   14 definition: const_dcl check_semicolon .

    $default  reduce using rule 14 (definition)


state 36

   15 definition: except_dcl check_semicolon .

    $default  reduce using rule 15 (definition)


state 37

  181 ns_scoped_name: ns_scoped_name TOK_OP_SCOPE . ident

    TOK_IDENT  shift, and go to state 3

    ident  go to state 51


state 38

   88 const_dcl_def: TOK_CONST . const_type new_ident '=' const_exp

    TOK_BOOLEAN   shift, and go to state 52
    TOK_CHAR      shift, and go to state 53
    TOK_DOUBLE    shift, and go to state 54
    TOK_FIXED     shift, and go to state 55
    TOK_FLOAT     shift, and go to state 56
    TOK_LONG      shift, and go to state 57
    TOK_OCTET     shift, and go to state 58
    TOK_OP_SCOPE  shift, and go to state 1
    TOK_SHORT     shift, and go to state 59
    TOK_STRING    shift, and go to state 60
    TOK_UNSIGNED  shift, and go to state 61
    TOK_WCHAR     shift, and go to state 62
    TOK_WSTRING   shift, and go to state 63
    TOK_IDENT     shift, and go to state 3

    const_type             go to state 64
    scoped_name            go to state 65
    ns_scoped_name         go to state 18
    floating_pt_type       go to state 66
    fixed_pt_const_type    go to state 67
    integer_type           go to state 68
    signed_int             go to state 69
    signed_short_int       go to state 70
    signed_long_int        go to state 71
    signed_longlong_int    go to state 72
    unsigned_int           go to state 73
    unsigned_short_int     go to state 74
    unsigned_long_int      go to state 75
    unsigned_longlong_int  go to state 76
    char_type              go to state 77
    wide_char_type         go to state 78
    boolean_type           go to state 79
    octet_type             go to state 80
    string_type            go to state 81
    wide_string_type       go to state 82
    ident                  go to state 19
    ns_prev_ident          go to state 20


state 39

   90 except_dcl_def: TOK_EXCEPTION . new_scope '{' member_zlist '}' pop_scope

    TOK_IDENT  shift, and go to state 3

    ident         go to state 83
    new_scope     go to state 84
    ns_new_ident  go to state 85


state 40

   22 module_declspec: z_declspec TOK_MODULE .

    $default  reduce using rule 22 (module_declspec)


state 41

  273 codefrag: z_declspec TOK_CODEFRAG .

    $default  reduce using rule 273 (codefrag)


state 42

  265 z_props: '[' . $@13 prop_hash ']'

    $default  reduce using rule 264 ($@13)

    $@13  go to state 86


state 43

   46 type_dcl: z_declspec type_dcl_def .

    $default  reduce using rule 46 (type_dcl)


state 44

   48 type_dcl_def: struct_type .

    $default  reduce using rule 48 (type_dcl_def)


state 45

   49 type_dcl_def: union_type .

    $default  reduce using rule 49 (type_dcl_def)


state 46

   87 const_dcl: z_declspec const_dcl_def .

    $default  reduce using rule 87 (const_dcl)


state 47

   89 except_dcl: z_declspec except_dcl_def .

    $default  reduce using rule 89 (except_dcl)


state 48

   50 type_dcl_def: enum_type .

    $default  reduce using rule 50 (type_dcl_def)


state 49
